testsuite/tests/checks/use_clauses/test.out
pack2.ads:2:5: error: use clause
2 | use Pack, Pack;             --  FLAG FLAG
  |     ^^^^ 

pack2.ads:2:11: error: use clause
2 | use Pack, Pack;             --  FLAG FLAG
  |           ^^^^ 

